Initial commit for authentication on front end.
Part of issue: #10

Added a new NPM package to help us handle cookies.
Added a new React component for login. It should handle registrations
and forgot passwords etc as well, I think.

TODO:
1. Complete the rest of the UI workflows.
2. Store token somewhere to be consumed by other AJAX calls.
(LocalStorage maybe?)
3. Handle routes for login/signup workflow.

--- a/ds_medical_care/package.json
+++ b/ds_medical_care/package.json
@@ -31,7 +31,8 @@
     "bootstrap-webpack": "0.0.3",
     "file-loader": "~0.8.4",
     "url-loader": "~0.5.6",
-    "expose-loader": "~0.7.0"
+    "expose-loader": "~0.7.0",
+    "js-cookie": "~2.0.2"
   },
   "dependencies": {}
 }
