Implemented UI for login/register workflow
Part of issue: #10

Completed the workflow of setting auth tokens, surfacing error messages
and login after registration success. As well, set up the initial
routing framework using React Router.

1. Also required the use of Lodash. It is advised to use this
extensively for nice functional programming esp. on collections.

2. All pages should go under /pages/, if the page has a child
component, it can be determined if it's external or internal,
determined by the likelyhood of whether the child component can be used
in other pages.

--- a/ds_medical_care/package.json
+++ b/ds_medical_care/package.json
@@ -32,7 +32,9 @@
     "file-loader": "~0.8.4",
     "url-loader": "~0.5.6",
     "expose-loader": "~0.7.0",
-    "js-cookie": "~2.0.2"
+    "js-cookie": "~2.0.2",
+    "lodash": "~3.10.0",
+    "react-router": "~0.13.3"
   },
   "dependencies": {}
 }
