--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
 Django==1.8.3
+django-allauth==0.21.0
+django-rest-auth==0.4.0
 django-webpack-loader==0.1.2.1
 djangorestframework==3.1.3
+oauthlib==0.7.2
+python-openid==2.2.5
+requests==2.7.0
+requests-oauthlib==0.5.0
+six==1.9.0
 wheel==0.24.0
