--- a/ds_medical_care/package.json
+++ b/ds_medical_care/package.json
@@ -34,7 +34,9 @@
     "expose-loader": "~0.7.0",
     "js-cookie": "~2.0.2",
     "lodash": "~3.10.0",
-    "react-router": "~0.13.3"
+    "react-router": "~0.13.3",
+    "css-loader": "~0.15.6",
+    "style-loader": "~0.12.3"
   },
   "dependencies": {}
 }
