--- a/ds_medical_care/package.json
+++ b/ds_medical_care/package.json
@@ -36,7 +36,8 @@
     "lodash": "~3.10.0",
     "react-router": "~0.13.3",
     "css-loader": "~0.15.6",
-    "style-loader": "~0.12.3"
+    "style-loader": "~0.12.3",
+    "react-dropzone": "~1.2.4"
   },
   "dependencies": {}
 }
