--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-rest-auth==0.4.0
 django-webpack-loader==0.1.2.1
 djangorestframework==3.1.3
 oauthlib==0.7.2
+Pillow==2.9.0
 PyCap==1.0
 python-openid==2.2.5
 requests==2.7.0
